JPQL 사용자 정의 함수

--- a/jpql/pom.xml
+++ b/jpql/pom.xml
@@ -19,8 +19,8 @@
         <!-- 스프링부트와 버전을 맞춤 -->
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.4.14.Final</version>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.31.Final</version>
         </dependency>
 
         <dependency>
